--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <div class="container">
       <%= yield %>
       <% render 'layouts/_footer' %>
+      <!-- 限制只在开 发环境中显示调试信息。 -->
+      <% debug(params) if Rails.env.development? %>
     </div>
 </body>
 
