--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,12 @@
 <body>
   <%= render 'layouts/header' %>
     <div class="container">
+        <!-- 在网站的布局中添加 flash 变量的内容 -->
+        <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% end %>
       <%= yield %>
-      <% render 'layouts/_footer' %>
+      <%= render 'layouts/footer' %>
       <!-- 限制只在开 发环境中显示调试信息。 -->
       <% debug(params) if Rails.env.development? %>
     </div>
