--- a/app/views/microposts/_microppost.html.erb
+++ b/app/views/microposts/_microppost.html.erb
@@ -5,8 +5,16 @@
     </span>
     <span class="content">
       <%= micropost.content %>
+      <%= image_tag micropost.picture.url if micropost.picture? %>
     </span>
     <span class="timestamp">
       Posted
-      <%= time_ago_in_words(micropost.created_at) %> ago. </span>
+      <%= time_ago_in_words(micropost.created_at) %> ago. 
+      <% if current_user?(micropost.user) %>
+         <%= link_to "delete" , micropost,method:delete,
+         data:{confirm:"Your sure?"} %>
+      <% end %>
+    
+    
+    </span>
 </li>
